# cpp-mimeapps

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  meson.build  run_cppcheck.sh
.github/workflows/: .github.yml
examples/: meson.build
examples/openwith-cli/: CMakeLists.txt  main.cpp  meson.build
examples/openwith-qt/: main.cpp  openwith-qt.pro  widget.cpp  widget.h
source/: CMakeLists.txt  basedir.cpp  basedir.h  desktopfile.cpp  desktopfile.h  inilike.cpp  inilike.h  meson.build  mimeapps.h  path.cpp  path.h  splitter.h  system.cpp  system.h
unittests/: CMakeLists.txt  meson.build  test.cpp
